<resources>
    <string name="app_name">MyWeatherApp1</string>
    <string name="st_paul_mn">St. Paul, MN</string>
    <string name="temperature">%1$d°</string>
    <string name="feels_like">Feels like: %1$d°</string>
    <string name="low">Low %1$d°</string>
    <string name="high">High %1$d°</string>
    <string name="humidity">Humidity %1$d  </string>
    <string name="pressure">Pressure %1$d hPa</string>
    <string name="forecast">Forecast</string>
    <string name="zip_code">ZIP Code</string>
    <string name="search">Search</string>
    <string name="ok">ok</string>
</resources>