<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    tools:context=".ForecastActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="12dp"
        tools:text="Jan 31" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Sunrise: 8:00am" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/sunrise"
        app:layout_constraintTop_toBottomOf="@id/sunrise"
        tools:text="Sunset:9:00pm" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        app:layout_constraintStart_toEndOf="@id/date"
        app:layout_constraintTop_toTopOf="@id/date"
        tools:text="@string/temperature" />

    <TextView
        android:id="@+id/fhigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/current_temp"
        tools:text="@string/high" />

    <TextView
        android:id="@+id/flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="@id/fhigh"
        app:layout_constraintStart_toEndOf="@id/fhigh"
        tools:text="@string/low" />


</androidx.constraintlayout.widget.ConstraintLayout>